# ZettleAgent

./: .gitattributes  .gitignore  CONTRIBUTING.md  CONTRIBUTING_CN.md  LICENSE  README.md  README_CN.md  README_JP.md  README_KR.md  index.html  knowledge_graph.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/locales/: en-US.wxl  zh-CN.wxl
src-tauri/resources/demo-vault/: AI Agent Architecture.md  Attention Mechanism.md  BERT.md  Cognitive Load Theory.md  Efficient Transformers.md  Emergence.md  GPT Series.md  Knowledge Graphs.md  Natural Language Processing.md  Retrieval-Augmented Generation.md  Scaling Laws.md  Transfer Learning.md  Transformer Architecture.md  Zettelkasten Method.md
src-tauri/resources/ocr_models/: .pack-version
src-tauri/src/: app_paths.rs  canvas.rs  chat_file_log.rs  chunker.rs  db_config.rs  error.rs  file_lock.rs  frontmatter.rs  gpu.rs  lib.rs  lint.rs  main.rs  pipeline_log.rs  reconciler.rs  temporal.rs  watcher.rs
src-tauri/src/agents/: fast_path.rs  instance.rs  intent.rs  intent_classifier.rs  mod.rs  orchestrator.rs  registry.rs  router.rs  strategy.rs
src-tauri/src/commands/: attachment_commands.rs  bases_commands.rs  chat_commands.rs  chat_history_commands.rs  file_commands.rs  graph_commands.rs  lint_commands.rs  mod.rs  reconcile_commands.rs  scheduler_commands.rs  search_commands.rs  timeline_commands.rs
src-tauri/src/db/: mod.rs  schema.rs  search.rs  (+1 more)
(+234 files in other folders)
