[package]
name = "zettelagent"
version = "0.1.0"
description = "ZettelAgent - AI-Powered Zettelkasten Desktop Application"
authors = ["you"]
edition = "2021"

[lib]
name = "zettelagent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "blocking"] }
rusqlite = { version = "0.32.0", features = ["bundled", "load_extension"] }
sqlite-vec = "0.1.9"
notify = "7.0.0"
notify-debouncer-mini = "0.5.0"
sha2 = "0.10"
pulldown-cmark = "0.12"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
anyhow = "1"
futures-util = "0.3"
regex = "1.10"
url = "2"
base64 = "0.22"
scraper = "0.22"
oxidize-pdf = "0.1.4"
zip = "2.1.0"
quick-xml = "0.36"
pure-onnx-ocr = "0.1.0"
image = "0.25"
wgpu = "0.20"

